# coupang-partners

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CLAUDE_복제본_작업안내.md  CODEX_복제본_작업안내.md  GIT_WORKFLOW.md  LICENSE  README.md  SETUP_GITHUB.md  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.yml  requirements.txt
.devcontainer/: devcontainer.json
automation-server/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json
coupang_auto_blog/: .cursorrules  .firebaserc  .gitignore  CLAUDE.md  README.md  check_settings.js  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  storage.rules  작업예정내용 확인해야함.txt
docs/: Firebase-가이드.md  README.md  SEO_OPTIMIZATION_2026-02-19.md  SYNC_GUIDE.md  문제해결-가이드.md  (+9 more)
shopping_shorts_automation/: .env.example  .gitignore  CHANGELOG.md  DEPLOY_TO_WEB.md  PROJECT_STATUS.md  README.md  RUN.bat  SETUP.bat  list_gemini_models.py  pyproject.toml  requirements.txt  start.bat  test_api.py  test_douyin_search.py  test_gemini.py  test_gemini_debug.py  다른_컴퓨터에서_시작하기.md  바탕화면_바로가기_만들기.bat  바탕화면_바로가기_만들기.vbs
shopping_shorts_automation/app/: main.py
shopping_shorts_automation/core/: __init__.py  checklist_creator.py  douyin_crawler.py  douyin_search.py  file_manager.py  keyword_translator.py  openai_client.py  script_generator.py  utils.py
shopping_shorts_automation/docs/: DEVELOPMENT_PLAN.md  IMPROVEMENTS.md  INTEGRATION_SUMMARY.md  TECH_STACK.md  USER_GUIDE.md
shopping_shorts_automation/prompts/: script_prompt.txt  thumbnail_prompt.txt  translation_prompt.txt
(+505 files in other folders)
